# dots

./: .gitmodules  alacritty-keybinds.yml  alacritty.yml  bash_profile  bashrc  install.conf.yaml  install.config.yaml  vimrc  zshenv  zshrc
config/: Renviron  Rprofile  brave-flags.conf  lintr  pyproject.toml  starship.toml
config/aichat/: config.yaml
config/alacritty/: alacritty-keybinds.toml  alacritty.toml  alacritty.yml  amber-on-black.toml  amber-on-black.yml  ayu_dark.toml  breeze.yml  cyan-on-black.toml  cyan-on-black.yml  green-on-black.toml  green-on-black.yml  japanesque.toml  japanesque.yml  tango-dark.yml
config/biome/: biome.json
config/blackbox/: Green-On-Black.json  ayu-dark.json  glib-2.0_settings_keyfile
config/code-snippets/: global.json  package.json  xml.json
config/codex/: blob  config.toml
config/efm-langserver/: config.yaml
config/environment.d/: 00-global.conf
config/fastfetch/: blood-rune.txt  config.jsonc  ouroboros.txt
config/ghostty/: config
config/git/: .gitignore  attributes  config  enforcessh  ignore
config/gnome-shell/: backup-keybinds.sh  gnome-extensions.conf  gnome-extensions.toml  gnome.toml  keybinds-forge.toml  keybinds-pop-shell.toml  keybinds-settingsdaemon-mediakeys.conf  keybinds-settingsdaemon-mediakeys.toml  keybinds-wm.toml  keybinds.sh  restore-keybinds.sh
config/gnupg/: gpg.conf
config/gtk-3.0/: bookmarks  gtk.css  gtk.css.bak
config/helix/: config.toml  languages.toml
config/htop/: htoprc
config/kitty/: green-on-black.conf  japanesque.conf  kitty.conf
config/lf/: cleaner  icons  lfrc  preview-sandbox.sh  sixel.sh
config/nvchad/: README.md  binaries.sh  chadrc.lua  init.lua  mappings.lua  plugins.lua
config/nvim/: init.lua
config/ohmyposh-themes/: starship-default-mininaml.json
config/pop-shell/: config.json
config/psd/: psd-resync.timer.d_frequency.conf  psd.conf
config/ranger/: rc.conf
config/rofi/: app-launcher.rasi  japanesque.rasi
config/rog/: rog-control-center.cfg
config/starship-themes/: default-minimal-light.toml  default-minimal.toml  default.toml  default_ES.toml  pure-preset.toml  right-prompt.toml  sharp-minimal-light.toml
config/sway/: config
config/taplo/: taplo.toml
config/vale/: .vale.ini
config/vscode/: Python-Data-Codium.code-profile  Python-Data.code-profile  Python.code-profile  Shell Scripting.code-profile  base.code-profile  keybindings.jsonc  settings.jsonc  (+5 more)
config/vscode-neovim/: init.lua
templates/: .cursorignore  .cursorrules  .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  LICENSE  Libro.xlsx  Rprofile  compose.yaml  config.py  devops.rule  pyproject.toml  quadlet.container  script.sh  script_args.sh
(+102 files in other folders)
