[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--failed-first"

[tool.ruff]
extend-ignore = [
    "E402"  # Disable imports not on top
    ]
exclude = [
    '.svn',
    'data',
    'CVS',
    '.bzr',
    '.hg',
    '.git',
    '__pycache__',
    '.tox',
    '.idea',
    '.mypy_cache',
    '.venv',
    'node_modules',
    '_state_machine.py',
    'test_fstring.py',
    'bad_coding2.py',
    'badsyntax_*.py',
]

[tool.ruff.flake8-quotes]
inline-quotes = 'single'

[tool.pyright]
typeCheckingMode = "standard"
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
reportMissingImports = false

[tool.mypy]
exclude = [
    '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
]
ignore_missing_imports = true
