[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--failed-first"

[tool.ruff]
extend-ignore = [
  "E402", # Disable imports not on top
]
exclude = [
  '.svn',
  'data',
  'CVS',
  '.bzr',
  '.hg',
  '.git',
  '__pycache__',
  '.tox',
  '.idea',
  '.mypy_cache',
  '.venv',
  'node_modules',
  '_state_machine.py',
  'test_fstring.py',
  'bad_coding2.py',
  'badsyntax_*.py',
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
] # Pyflakes (`F`) and a subset of the pycodestyle (`E`).
ignore = []
fixable = ["ALL"] # fix for all enabled rules (when `--fix`) is provided
unfixable = []

[tool.ruff.format]
quote-style = "double"            # double quotes for strings.
indent-style = "space"            # indent with spaces,
skip-magic-trailing-comma = false #respect magic trailing commas.
line-ending = "auto"

[tool.ruff.flake8-quotes]
inline-quotes = 'single'

[tool.pyright]
# venvPath = "/home/user/Code"
# venv = ".devel-env"
typeCheckingMode = "off"
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "src/experimental",
  "src/typestubs",
]
reportMissingImports = false

[tool.mypy]
mypy_path = "/home/user/Code/.devel-env/lib64/python3.12/site-packages"
exclude = [
  '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
  "^file2\\.py$", # TOML basic string (double-quotes, backslash and other characters need escaping)
]
ignore_missing_imports = true
